src/parser/snapshots/scoreman__parser__parser_tests__bendy_score-2.snap
---
source: src/parser/parser_tests.rs
expression: parse(&to_lines(score)).dump_tracks()
---
--12b-12b-
--3 --12b-
2-- --12b-
--- --12b-
--- --12b-
--- --12b-
