src/parser/snapshots/scoreman__parser__parser_tests__multichar_tracks.snap
---
source: src/parser/parser_tests.rs
expression: parse(&to_lines(input)).dump_tracks()
---
- --5- 
- -3-- 
10---12
- ---- 
- ---- 
- ----
