src/parser/snapshots/scoreman__parser__parser_tests__parse3-2.snap
---
source: src/parser/parser_tests.rs
expression: parse3_result
---
ParseResult {
    error: None,
    tick_stream: [
        Rest,
        Fret(
            3,
        ),
        Rest,
        Rest,
        Rest,
        Rest,
        Rest,
        Rest,
        Fret(
            6,
        ),
        Rest,
        Rest,
        Rest,
        Fret(
            12,
        ),
        Rest,
        Fret(
            3,
        ),
        Rest,
        Rest,
        Rest,
        Rest,
        Rest,
        Rest,
        Rest,
        Rest,
        Rest,
        Fret(
            12,
        ),
        Rest,
        Fret(
            3,
        ),
        Rest,
        Rest,
        Fret(
            9,
        ),
        Rest,
        Fret(
            3,
        ),
        Rest,
        Rest,
        Rest,
        Rest,
        Rest,
        Rest,
        Fret(
            6,
        ),
        Rest,
        Rest,
        Rest,
        Fret(
            12,
        ),
        Rest,
        Fret(
            3,
        ),
        Rest,
        Rest,
        Rest,
        Rest,
        Rest,
        Rest,
        Rest,
        Rest,
        Rest,
        Fret(
            12,
        ),
        Rest,
        Fret(
            3,
        ),
        Rest,
        Rest,
        Fret(
            9,
        ),
        Rest,
        Fret(
            3,
        ),
        Rest,
        Rest,
        Rest,
        Rest,
        Rest,
        Rest,
        Fret(
            6,
        ),
        Rest,
        Rest,
        Rest,
        Fret(
            12,
        ),
        Rest,
        Fret(
            3,
        ),
        Rest,
        Rest,
        Rest,
        Rest,
        Rest,
        Rest,
        Rest,
        Rest,
        Rest,
        Fret(
            12,
        ),
        Fret(
            11,
        ),
        Fret(
            11,
        ),
        Fret(
            11,
        ),
        Fret(
            11,
        ),
        Fret(
            11,
        ),
        Rest,
        Fret(
            3,
        ),
        Rest,
        Rest,
        Rest,
        Rest,
        Rest,
        Rest,
        Fret(
            6,
        ),
        Rest,
        Rest,
        Rest,
        Fret(
            12,
        ),
        Rest,
        Fret(
            3,
        ),
        Rest,
        Rest,
        Rest,
        Rest,
        Rest,
        Rest,
        Rest,
        Rest,
        Rest,
        Fret(
            12,
        ),
        Rest,
        Fret(
            3,
        ),
        Rest,
        Rest,
        Fret(
            9,
        ),
        Rest,
        Fret(
            3,
        ),
        Rest,
        Rest,
        Rest,
        Rest,
        Rest,
        Rest,
        Fret(
            6,
        ),
        Rest,
        Rest,
        Rest,
        Fret(
            12,
        ),
        Rest,
        Fret(
            3,
        ),
        Rest,
        Rest,
        Rest,
        Rest,
        Rest,
        Rest,
        Rest,
        Rest,
        Rest,
        Fret(
            12,
        ),
        Rest,
        Fret(
            3,
        ),
        Rest,
        Rest,
        Fret(
            9,
        ),
    ],
    measures: [
        Measure {
            data_range: 0..=29,
        },
        Measure {
            data_range: 30..=59,
        },
        Measure {
            data_range: 60..=89,
        },
        Measure {
            data_range: 90..=119,
        },
        Measure {
            data_range: 120..=149,
        },
    ],
    base_notes: [
        'e',
        'B',
        'G',
        'D',
        'A',
        'E',
        'e',
        'B',
        'G',
        'D',
        'A',
        'E',
    ],
    offsets: [
        (
            1,
            0,
        ),
        (
            10,
            90,
        ),
    ],
}
