src/parser/snapshots/scoreman__parser__parser_tests__parse3.snap
---
source: src/parser/parser_tests.rs
expression: parse3_result.dump_tracks()
---
--12-12--12-12--12-12--12-12--12-12
3-- -- 3-- -- 3-- -113-- -- 3-- -- 
-63 -3 -63 -3 -63 -11-63 -3 -63 -3 
--- -- --- -- --- -11--- -- --- -- 
--- -- --- -- --- -11--- -- --- -- 
--- -9 --- -9 --- -11--- -9 --- -9
