src/parser/snapshots/scoreman__parser__parser_tests__part.snap
---
source: src/parser/parser_tests.rs
expression: parse(&to_lines(example_part)).dump_tracks()
---
------
-3-3-3
6-6-6-
------
------
------
