src/parser/snapshots/scoreman__parser__parser_tests__right_bend_score.snap
---
source: src/parser/parser_tests.rs
expression: parse(&to_lines(score)).dump_tracks()
---
--12b
-0- 3
2-- -
--- -
--- -
--- -
