src/parser/snapshots/scoreman__parser__parser_tests__score.snap
---
source: src/parser/parser_tests.rs
expression: parse(&to_lines(example_score)).dump_tracks()
---
------
-3-3-3
6-6-6-
------
------
------
